Changed all of the circuit class visibility to public, got a proof of concept circuit GUI working. This would be for in game editing in a "IC Fab" block or something like that. Possibly a debug tool that would allow in the field debugging would open this screen as well.